--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Hi Dindaa</h1>
+    <h1>Love You Sayang</h1>
   </body>
 </html>
