--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hi Dindaa</h1>
-    <h1>Love You Sayang</h1>
+    <div class="container">
+      <h1>Hi Dindaa</h1>
+      <h1>Love You Sayang</h1>
+    </div>
   </body>
 </html>
